--- a/glade/icons/hicolor/22x22/actions/Makefile.am
+++ b/glade/icons/hicolor/22x22/actions/Makefile.am
@@ -1,4 +1,8 @@
+if PLATFORM_WIN32
+iconsdir = `cygpath \`pkg-config --variable=pixmapdir gladeui-2.0\``/hicolor/22x22/actions
+else
 iconsdir = `pkg-config --variable=pixmapdir gladeui-2.0`/hicolor/22x22/actions
+endif
 
 icons_DATA = widget-gtkmapserver-gtkmapserver.png
 
